--- a/bin/ProgramaBasic/.project
+++ b/bin/ProgramaBasic/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ExemploBancoComHeranca</name>
+	<name>ProgramaBasic</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -16,7 +16,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1628507281270</id>
+			<id>1628295955358</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
